<resources>
    <string name="app_name">Zena Party</string>
    <string name="goToLogin">Do you already have an account? Click here and login!</string>
    <string name="goToRegister">Not registered? Click here to create a new account!</string>
    <string name="places_prompt">Test</string>
    <string name="neededPermissions">To go over, the app needs the CALENDAR PERMISSION to access to the calendar Content Provider</string>
    <string name="grantPermission">Grant Now</string>
    <string name="zena_party">Zena Party</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginbtn">Login</string>
    <string name="logo">logo</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="delete_button">delete button</string>
    <string name="dove">Dove:</string>
    <string name="orario">Orario:</string>
    <string name="prezzo">Prezzo:</string>
    <string name="tipologia">Tipologia:</string>
    <string name="i_tuoi_eventi">Eventi creati</string>
    <string name="nessun_evento_inserito">Nessun evento inserito.</string>
    <string name="i_tuoi_preferiti">I tuoi preferiti</string>
    <string name="seleziona_categoria">Seleziona categoria</string>
    <string name="disco_e_feste">Disco e Feste</string>
    <string name="musica">Musica</string>
    <string name="sagre">Sagre</string>
    <string name="sport">Sport</string>
    <string name="ok">OK</string>
    <string name="altro">Altro</string>
    <string name="annulla">ANNULLA</string>
    <string name="button_save">button save</string>
    <string name="button_add_to_calendar">button add to calendar</string>
    <string name="button_close">button close</string>
    <string name="maps">maps</string>
    <string name="event_image">event image</string>
    <string name="by">By:</string>
    <string name="data">Data:</string>
    <string name="about">About</string>
    <string name="content_description_default">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="filter_options">Filter options</string>
    <string name="decrease_date">Decrease Date</string>
    <string name="ven_6_giugno">Ven 6 Giugno</string>
    <string name="increase_date">Increase Date</string>
    <string name="nessun_evento">Siamo spiacenti, nessun evento disponibile per la data selezionata. :(</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Impostazioni</string>
    <string name="notifiche">Notifiche</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="logout">Logout</string>
    <string name="new_username">Nuovo username</string>
    <string name="salva_modifiche">Salva</string>
    <string name="profile">Profilo</string>
    <string name="max_power">Max Power</string>
    <string name="inserisci_un_nuovo_evento">Inserisci un nuovo evento</string>
    <string name="descrizione">Descrizione</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="data_inizio_evento">Data Inizio Evento</string>
    <string name="ora_inizio_evento">Ora Inizio Evento</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="home">Home</string>
    <string name="add_event">Add Event</string>
    <string name="passwdiff">Le password sono diverse</string>
    <string name="language">Lingua</string>
    <string name="username_modificato">Username modificato</string>
    <string name="lingua_modificata">Lingua modificata</string>
    <string name="i_suoi_eventi">Eventi</string>
    <string name="organizzatore">Organizzatore</string>
    <string name="mostra_organizzatore">Mostra organizzatore</string>
    <string name="event_added">Evento aggiunto con successo</string>
    <string name="rimozione_evento">Sei sicuro di voler rimuovere questo evento?</string>
    <string name="conferma_rimozione">Conferma rimozione</string>
    <string name="logout_dialog">Sei sicuro di voler fare il logout?</string>
    <string name="remove_review">Sei sicuro di voler rimuovere la tua recensione?</string>
    <string name="exit_dialog">Potresti avere dei dati non salvati. Sei sicuro di voler uscire dall\'app?</string>
    <string name="qr_code_not_valid">QR code non valido. Riprovare.</string>
    <string name="crea_verifica_promo">Crea/Verifica promo</string>
    <string name="i_tuoi_sconti">Promo da utilizzare</string>
    <string name="crea_promo">Crea nuova promo</string>
    <string name="confirm">Conferma</string>
    <string name="hint_congratulazioni">Congratulazioni! Hai ricevuto...</string>
    <string name="help_crea_verifica_promo">In questa sezione puoi trovare le promozioni da te create. Inoltre puoi creare nuove promo e convalidare quelle dei tuoi clienti.</string>
    <string name="qr_not_valid_retry">Il QR code scannerizzato non è valido. Riprova.</string>
    <string name="nessuna_promozione_aggiunta">Nessuna promozione aggiunta.</string>
    <string name="verifica">Verifica</string>
    <string name="nessun_qr_code_aggiunto_ni_codici_da_te_creati_verranno_mostrati_qui">Nessun QR code aggiunto.\nI codici da te creati verranno mostrati qui.</string>
    <string name="crea">Crea</string>
    <string name="fireworks">fireworks</string>
    <string name="clicca_qui_per_usare_il_bonus">Clicca qui per usare il bonus</string>
    <string name="generated_qr_bonus">generated QR Bonus</string>
    <string name="qr_code">QR Code</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="download">Download</string>
    <string name="already_scanned"><![CDATA[Hai già scannerizzato questo codice QR.\nLo trovi nella tua sezione profilo -> Promo da utilizzare]]></string>
    <string name="already_used">Siamo spiacenti: hai già utilizzato questa promo</string>
    <string name="no_corrispondenza">Il QR code scannerizzato non corrisponde a nessuna promozione. Riprova.</string>
    <string name="remove">Rimuovi</string>
    <string name="remove_msg">Sei sicuro di voler rimuovere questa promozione?</string>
    <string name="attenzione">Attenzione</string>
    <string name="attenzione_msg">Impossibile procedere: questa promo non è stata creata da te.</string>
    <string name="promo_non_esiste">Impossibile procedere: promo non esistente o formato non valido.</string>
    <string name="close">Chiudi</string>
    <string name="verifica_promo">Verifica Promo</string>
    <string name="promo_ok">Promo verificata con successo. Messaggio della promo:\n\n</string>
    <string name="promo_used">Sconto già utilizzato</string>
    <string name="never_scanned">Sconto mai scannerizzato dal cliente</string>
    <string name="not_by_u">Impossibile procedere: questa promo non è stata creata da te.</string>
</resources>