<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.AddEventFragment"
    android:orientation="vertical"
    android:id="@+id/linLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/inserisci_un_nuovo_evento"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autofillHints="test"
                android:background="@drawable/edit_text_border"
                android:hint="@string/nome_evento"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="5dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/addEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/descrizione"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:padding="5dp"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/addEventAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/indirizzo"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="5dp"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/addEventPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/prezzo"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="5dp"
                android:importantForAutofill="no"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_time_foreground"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/tvSelectDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/edit_text_border"
                    android:text="@string/ven_6_giugno"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:ignore="TextSizeCheck" />
                <TextView
                    android:id="@+id/tvselectTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/edit_text_border"
                    android:text="20:30"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="17sp"
                    tools:ignore="HardcodedText,TextSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tipologia"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/addEventType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/type"
                    android:layout_marginStart="20dp"
                    android:minHeight="48dp"
                    android:prompt="@string/places_prompt" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/addEventButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/green"
            android:text="@string/aggiungi"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>

