<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    tools:context=".fragments.ModificaProFiloFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/goBackBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_goback_foreground"
            app:tint="@color/black"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_toEndOf="@id/goBackBtn"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/modifica_profilo"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/usernameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username"
        android:minHeight="48dp"
        android:textStyle="italic"
        android:inputType="text"
        android:importantForAutofill="no" />
    <TextView
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_back_secondary_100"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/salva_modifiche"
        android:textAllCaps="false"
        android:textColor="@color/Primary" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/black"
        android:visibility="gone" />
</LinearLayout>



