<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientcolor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="8"
            android:text="@string/zena_party"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_border"
        android:gravity="center"
        android:padding="15dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/register"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textAlignment="viewStart"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textAlignment="viewStart"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textAlignment="viewStart"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/etPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="15dp"
                    android:textAlignment="viewStart"
                    android:autofillHints="" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#023B9E"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/switchRegisterToLoginLabel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:pointerIcon="hand"
        android:shadowColor="@color/white"
        android:shadowDx="10"
        android:shadowDy="10"
        android:text="@string/goToLogin"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />
</LinearLayout>
